Use procedures for reservation reports